--- a/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
+++ b/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
@@ -238,7 +238,7 @@
 
                 <!-- VIP badge -->
 
-                <ImageView
+                <com.expedia.bookings.widget.TextView
                     android:id="@+id/vip_badge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -246,8 +246,13 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="@dimen/hotel_details_callout_text_margin_x"
                     android:layout_marginTop="@dimen/hotel_details_callout_text_margin_y"
-                    android:src="@drawable/ic_tablet_vip_details"
-                    android:visibility="gone" />
+                    android:background="@drawable/bg_tablet_vip_details"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingTop="8dp"
+                    android:text="@string/vip_access"
+                    android:visibility="gone"
+                    app:textStyle="expedia_light" />
 
                 <!-- Sale/discount rate -->
 
