--- a/project/res/layout/fragment_itinerary_list.xml
+++ b/project/res/layout/fragment_itinerary_list.xml
@@ -110,9 +110,9 @@
                 android:gravity="center_vertical"
                 android:padding="16dp"
                 android:text="@string/enter_itinerary_number"
+                android:textAllCaps="true"
                 android:textColor="@color/itin_offwhite_text"
                 android:textSize="12sp"
-                app:textAllCaps="true"
                 app:textStyle="bold" />
 
             <View
