--- a/project/res/layout/fragment_tablet_checkout_data_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_data_form.xml
@@ -23,9 +23,9 @@
             android:gravity="center_vertical"
             android:padding="16dp"
             android:text="@string/done"
+            android:textAllCaps="true"
             android:textSize="14dp"
             android:textStyle="bold"
-            app:textAllCaps="true"
             app:textStyle="medium" />
 
         <View
