--- a/project/res/layout/widget_attraction_bubble.xml
+++ b/project/res/layout/widget_attraction_bubble.xml
@@ -8,9 +8,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:singleLine="true"
+        android:textAllCaps="true"
         android:textColor="@color/local_expert_primary_text"
-        android:textSize="@dimen/attraction_bubble_start_text_size"
-        app:textAllCaps="true"/>
+        android:textSize="@dimen/attraction_bubble_start_text_size" />
 
     <com.expedia.bookings.widget.AutoResizeTextView
         android:id="@+id/second_line_text_view"
@@ -18,9 +18,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:singleLine="true"
+        android:textAllCaps="true"
         android:textColor="@color/local_expert_primary_text"
-        android:textSize="@dimen/attraction_bubble_start_text_size"
-        app:textAllCaps="true"/>
+        android:textSize="@dimen/attraction_bubble_start_text_size" />
 
     <ImageView
         android:id="@+id/attraction_icon_image_view"
