--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -85,6 +85,7 @@
     <dimen name="flight_calendar_min_height">200dp</dimen>
     <dimen name="flight_segment_margin">6dp</dimen>
     <dimen name="cvv_keypad_text_size">24dp</dimen>
+    <dimen name="cvv_keypad_text_padding">0dp</dimen>
     <dimen name="cvv_keypad_book_text_size">16dp</dimen>
     <dimen name="flight_list_blur_height">70dp</dimen>
     <dimen name="checkout_form_bottom_spacer_margin">50dp</dimen>
