--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -186,7 +186,9 @@
 
     <!-- CVV Screen -->
     <dimen name="cvv_keypad_text_size">30sp</dimen>
+    <dimen name="cvv_keypad_text_padding">12dp</dimen>
     <dimen name="cvv_keypad_book_text_size">19sp</dimen>
+    <dimen name="cvv_finish_booking_container_height">150dp</dimen>
 
     <!-- Confirmation Fragment -->
     <dimen name="confirmation_width">450dp</dimen>
