--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -119,6 +119,9 @@
     <dimen name="tablet_checkout_trip_bucket_expanded_padding_major_y">24dp</dimen>
     <dimen name="tablet_checkout_trip_bucket_expanded_padding_minor_y">10dp</dimen>
 
+    <!-- CVV Screen -->
+    <dimen name="cvv_finish_booking_container_height">200dp</dimen>
+
     <!-- Confirmation Fragment -->
     <dimen name="confirmation_width">605dp</dimen>
     <dimen name="confirmation_image_height">235dp</dimen>
