--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Tablet colors -->
-    <color name="results_traveler_picker_bg">#eaeaea</color>
+    <color name="results_cal_trav_bg">#eaeaea</color>
     <color name="launch_tile_pressed_overlay">#40000000</color>
 
     <!-- Launch screen colors -->
