3324. Destination box uses "fly from" icon
Fixed search bar icons based on ResultsSearchState.

--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -63,7 +63,7 @@
                     android:hint="@string/search_all_hint"
                     android:background="@null"
                     android:paddingLeft="16dp"
-                    android:drawableLeft="@drawable/ic_tablet_origin_arrow"
+                    android:drawableLeft="@drawable/ic_searchbox"
                     android:drawablePadding="8dp"
                     android:inputType="textNoSuggestions"
                     android:imeOptions="actionSearch"
