--- a/project/res/layout/fragment_tablet_flight_details.xml
+++ b/project/res/layout/fragment_tablet_flight_details.xml
@@ -73,8 +73,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:paddingBottom="12dp"
                     android:paddingLeft="@dimen/tablet_flight_details_horizontal_padding"
-                    android:paddingRight="@dimen/tablet_flight_details_horizontal_padding">
+                    android:paddingRight="@dimen/tablet_flight_details_horizontal_padding" >
 
                     <!-- Cool stats on the flight -->
 
