3381 3149: Don't generate yet another full screen bitmap
SVGView is all software rendered. Worse is that it generates a
fullscreen bitmap then it is "stuck" until the activity finishes. So if
you go to results, whoops it's forever in memory.

Also this should Fix Mike's problem where his Tab 7 was trying to draw a
bitmap that was much larger than the screen and bailing out and not
showing a map at all.

--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -75,14 +75,11 @@
         android:visibility="visible"
         android:background="#070f24">
 
-        <com.larvalabs.svgandroid.widget.SVGView
+        <View
             android:id="@+id/globe_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="-40dp"
-            android:alpha=".1"
-            app:zoomMode="fitWidth"
-            app:src="@raw/map_tablet_launch"/>
+            android:alpha="0.1" />
 
         <LinearLayout
             android:layout_width="wrap_content"
