--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -10,12 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <View
+    <include
         android:id="@+id/action_bar_background"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:background="@drawable/top_gradient_global"/>
+        layout="@layout/include_checkout_action_bar_background" />
 
     <!-- CVV -->
 
