--- a/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
+++ b/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
@@ -326,6 +326,8 @@
                     android:gravity="center"
                     android:ellipsize="end"
                     android:includeFontPadding="false"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     android:singleLine="true"
                     android:textColor="#ffffff"
                     android:textSize="20sp"
