Enabling drop downs in Flight search for all POS on AAG
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D557

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -475,4 +475,6 @@
     <attr name="infoContactUsString" format="reference|string"/>
     <attr name="infoContactEmailSubjectString" format="reference|string"/>
 
+    <attr name="loadingAirAsiaRoutesString" format="reference|string" />
+
 </resources>
