--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="Theme" parent="@android:style/Theme.NoTitleBar">
         <item name="android:windowBackground">@color/window_background</item>
@@ -21,9 +21,9 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
         <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
-        <item name="android:windowActionBar" tools:targetApi="11">false</item>
-        <item name="android:windowActionModeOverlay" tools:targetApi="11">true</item>
-        <item name="android:windowCloseOnTouchOutside" tools:targetApi="11">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowActionModeOverlay">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:backgroundDimAmount">0.6</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
@@ -57,21 +57,21 @@
     </style>
 
     <style name="Theme.Expedia" parent="@android:style/Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarItemBackground" tools:targetApi="14">@drawable/bg_actionbar_button</item>
-        <item name="android:actionBarStyle" tools:targetApi="11">@style/Dark.ActionBar</item>
-        <item name="android:actionBarTabBarStyle" tools:targetApi="11">@style/ActionBarTabBar</item>
-        <item name="android:actionBarTabStyle" tools:targetApi="11">@style/ActionBarTabView</item>
-        <item name="android:actionBarTabTextStyle" tools:targetApi="11">@style/ActionBarTabText</item>
-        <item name="android:actionDropDownStyle" tools:targetApi="11">@style/Dark.DropDown</item>
-        <item name="android:actionMenuTextColor" tools:targetApi="11">@color/actionbar_text</item>
-        <item name="android:actionModeBackground" tools:targetApi="11">@drawable/bg_action_mode</item>
-        <item name="android:actionModeCloseDrawable" tools:targetApi="11">@drawable/btn_navigation_cancel</item>
-        <item name="android:actionModeCloseButtonStyle" tools:targetApi="11">@style/ActionModeCloseMode</item>
+        <item name="android:actionBarItemBackground">@drawable/bg_actionbar_button</item>
+        <item name="android:actionBarStyle">@style/Dark.ActionBar</item>
+        <item name="android:actionBarTabBarStyle">@style/ActionBarTabBar</item>
+        <item name="android:actionBarTabStyle">@style/ActionBarTabView</item>
+        <item name="android:actionBarTabTextStyle">@style/ActionBarTabText</item>
+        <item name="android:actionDropDownStyle">@style/Dark.DropDown</item>
+        <item name="android:actionMenuTextColor">@color/actionbar_text</item>
+        <item name="android:actionModeBackground">@drawable/bg_action_mode</item>
+        <item name="android:actionModeCloseDrawable">@drawable/btn_navigation_cancel</item>
+        <item name="android:actionModeCloseButtonStyle">@style/ActionModeCloseMode</item>
         <item name="android:buttonStyle">@style/Widget.Button.Phone</item>
         <item name="android:dropDownListViewStyle">@style/Dark.DropDownListView</item>
         <item name="android:editTextStyle">@style/Widget.EditText.Phone</item>
         <item name="android:textViewStyle">@style/Widget.TextView.Phone</item>
-        <item name="android:selectableItemBackground" tools:targetApi="11">@drawable/bg_actionbar_button</item>
+        <item name="android:selectableItemBackground">@drawable/bg_actionbar_button</item>
         <item name="android:spinnerStyle">@style/Widget.Spinner.Phone</item>
         <item name="numberPickerUpButtonStyle">@style/Widget.ImageButton.NumberPickerUpButton</item>
         <item name="numberPickerDownButtonStyle">@style/Widget.ImageButton.NumberPickerDownButton</item>
@@ -80,7 +80,7 @@
         <item name="simpleNumberPickerDownButtonStyle">@style/NumberPickerButton.Down</item>
         <item name="simpleNumberPickerInputTextStyle">@style/NumberPickerText</item>
         <item name="simpleNumberPickerUpButtonStyle">@style/NumberPickerButton.Up</item>
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_hotels</item>
+        <item name="android:logo">@drawable/ic_logo_hotels</item>
         <item name="actionBarSpinnerBackground">@drawable/ab_spinner</item>
         <!-- Custom attrs for Expedia/VSC switching -->
         <item name="hotelPriceStandardColor">@color/hotel_price_text_color</item>
@@ -158,20 +158,20 @@
     <style name="Theme.Phone" parent="@style/Theme.Expedia" />
 
     <style name="Theme.Phone.NoActionBar">
-        <item name="android:windowActionBar" tools:targetApi="11">false</item>
+        <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="Theme.Phone.WebView">
-        <item name="android:logo" tools:targetApi="11">?attr/webViewPreferencesActionBarLogo</item>
+        <item name="android:logo">?attr/webViewPreferencesActionBarLogo</item>
     </style>
 
     <style name="Theme.Phone.WebView.WithTitle">
-        <item name="android:logo" tools:targetApi="11">?attr/webViewPreferencesActionBarLogoWithTitle</item>
+        <item name="android:logo">?attr/webViewPreferencesActionBarLogoWithTitle</item>
     </style>
 
     <style name="Theme.Phone.Preferences">
-        <item name="android:logo" tools:targetApi="11">?attr/webViewPreferencesActionBarLogo</item>
+        <item name="android:logo">?attr/webViewPreferencesActionBarLogo</item>
     </style>
 
     <style name="Theme.Phone.Dark" parent="Theme.Phone">
@@ -182,15 +182,15 @@
     </style>
 
     <style name="LoginTheme" parent="Theme.Phone.Dark">
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_expedia_logo</item>
+        <item name="android:logo">@drawable/ic_ab_expedia_logo</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowActionBarOverlay">true</item>
     </style>
 
     <style name="LaunchTheme" parent="@android:style/Theme.Holo">
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_expedia_logo</item>
-        <item name="android:actionBarStyle" tools:targetApi="11">@style/LaunchActionBar</item>
-        <item name="android:actionBarTabStyle" tools:targetApi="11">@style/LaunchActionBarTabStyle</item>
+        <item name="android:logo">@drawable/ic_ab_expedia_logo</item>
+        <item name="android:actionBarStyle">@style/LaunchActionBar</item>
+        <item name="android:actionBarTabStyle">@style/LaunchActionBarTabStyle</item>
 
         <!-- PopupMenu -->
         <item name="android:dropDownListViewStyle">@android:style/Widget.Holo.Light.ListView.DropDown</item>
@@ -231,7 +231,7 @@
     </style>
 
     <style name="LaunchActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:displayOptions" tools:targetApi="11">showHome|useLogo</item>
+        <item name="android:displayOptions">showHome|useLogo</item>
         <item name="android:background">@drawable/bg_launch_ab</item>
     </style>
 
@@ -254,10 +254,10 @@
         <item name="numberPickerDownButtonStyle">@style/Widget.ImageButton.NumberPickerDownButton</item>
         <item name="numberPickerInputTextStyle">@style/Widget.EditText.NumberPickerInputText</item>
         <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_flights</item>
-        <item name="android:actionBarStyle" tools:targetApi="11">@style/FlightActionBar</item>
-        <item name="android:actionMenuTextColor" tools:targetApi="11">@color/action_bar_flight_text_color</item>
-        <item name="android:actionModeCloseDrawable" tools:targetApi="11">@drawable/btn_navigation_cancel</item>
+        <item name="android:logo">@drawable/ic_logo_flights</item>
+        <item name="android:actionBarStyle">@style/FlightActionBar</item>
+        <item name="android:actionMenuTextColor">@color/action_bar_flight_text_color</item>
+        <item name="android:actionModeCloseDrawable">@drawable/btn_navigation_cancel</item>
         <item name="android:editTextStyle">@style/Widget.EditText.Phone</item>
         <item name="android:spinnerStyle">@style/Widget.Spinner.Phone.Flights</item>
         <item name="android:autoCompleteTextViewStyle">@style/Widget.AutoComplete</item>
@@ -276,7 +276,7 @@
     </style>
 
     <style name="FlightTheme.OverlayMode">
-        <item name="android:windowActionBarOverlay" tools:targetApi="11">true</item>
+        <item name="android:windowActionBarOverlay">true</item>
     </style>
 
     <style name="FlightTheme.CheckoutForms">
@@ -284,14 +284,14 @@
     </style>
 
     <style name="HotelWebViewTheme" parent="Theme.Phone">
-        <item name="android:actionBarStyle" tools:targetApi="11">@style/HotelWebViewActionBar</item>
+        <item name="android:actionBarStyle">@style/HotelWebViewActionBar</item>
     </style>
 
     <style name="HotelWebViewActionBar" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:background">?attr/actionBarBackgroundDrawable</item>
-        <item name="android:logo" tools:targetApi="11">?attr/hotelwebViewActionBarLogo</item>
-        <item name="android:titleTextStyle" tools:targetApi="11">@style/FlightActionBarTextAppearance</item>
-        <item name="android:homeAsUpIndicator" tools:targetApi="11">@drawable/ic_action_bar_back_arrow</item>
+        <item name="android:logo">?attr/hotelwebViewActionBarLogo</item>
+        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_action_bar_back_arrow</item>
     </style>
 
     <!--
@@ -304,9 +304,9 @@
 
     <style name="FlightActionBar" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:background">@drawable/bg_action_bar_flight_top</item>
-        <item name="android:backgroundSplit" tools:targetApi="14">@drawable/bg_action_bar_flight_bottom</item>
-        <item name="android:titleTextStyle" tools:targetApi="11">@style/FlightActionBarTextAppearance</item>
-        <item name="android:homeAsUpIndicator" tools:targetApi="11">@drawable/ic_action_bar_back_arrow</item>
+        <item name="android:backgroundSplit">@drawable/bg_action_bar_flight_bottom</item>
+        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_action_bar_back_arrow</item>
     </style>
 
     <style name="FlightActionBarTextAppearance" parent="@android:style/TextAppearance.Medium">
@@ -339,9 +339,9 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowActionBar" tools:targetApi="11">false</item>
-        <item name="android:windowActionModeOverlay" tools:targetApi="11">true</item>
-        <item name="android:windowCloseOnTouchOutside" tools:targetApi="11">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowActionModeOverlay">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
